# dgl

./: .gitmodules  CMakeLists.txt  ampl_test_requirements.txt  ampl_test_requirements_min.txt  build_dgl.sh  build_dgl.sh.ubuntu_pip_torch  build_dgl_amd_pip.sh  cuda_kernels.txt  pip.list.amd  requirements.txt  requirements_after_dgl_install.txt  rocm-req-543.txt  rocm_requirements.txt  setup_local_tioga.bash  task_unit_test_local_lassen.sh  use_cuda_call_macro.txt
cmake/: SetupDGLBLT.cmake  SetupDGLThirdParty.cmake
dgl_sparse/: build.sh
graphbolt/: build.sh
include/dgl/: StackTrace.h  array_iterator.h
include/dgl/aten/: macro.h
include/dgl/runtime/: c_runtime_api.h  dgl_hip.hpp  ndarray.h  tensordispatch.h
patch/: Caffe2Targets.cmake
python/: setup.py
python/dgl/_ffi/: base.py
python/dgl/_ffi/_ctypes/: ndarray.py
python/dgl/backend/pytorch/: tensor.py
script/: build_dgl_amd_pip.sh  hipify-dgl.sh  install_amd_pip.sh  install_amd_pip_skip_torch.sh  patch_caffe2_targets.py
src/array/: arith.h  array.cc  check.h  filter.cc  selector.h  uvm_array.cc
src/array/cpu/: array_op_impl.cc  sddmm.cc
src/array/hip/: array_cumsum.cpp  array_cumsum.info  array_index_select.cpp  array_index_select.h  array_nonzero.cpp  array_nonzero.info  array_op_impl.cpp  array_op_impl.info  array_scatter.cpp  array_scatter.info  array_sort.cpp  array_sort.info  atomic.h  atomic.info  bf16.h  bf16.info  coo2csr.cpp  coo2csr.info  coo_sort.cpp  coo_sort.info  csr2coo.cpp  csr2coo.info  csr_get_data.cpp  csr_get_data.info  csr_mm.cpp  csr_mm.info  csr_sort.cpp  csr_sort.info  csr_sum.cpp  csr_sum.info  csr_transpose.cpp  cuda_filter.cpp  cuda_filter.info  cusparse_dispatcher.h  cusparse_dispatcher.info  dgl_cub.h  dgl_cub.info  disjoint_union.cpp  disjoint_union.info  fp16.h  (+41 more)
src/array/hip/uvm/: array_index_select_uvm.cpp  array_index_select_uvm.h
src/geometry/hip/: edge_coarsening_impl.cpp  edge_coarsening_impl.info  geometry_op_impl.cpp  geometry_op_impl.info
src/graph/sampling/randomwalks/: frequency_hashmap.cpp  frequency_hashmap.h  frequency_hashmap.info  get_node_types_gpu.cpp  get_node_types_gpu.info  randomwalk_gpu.cpp  randomwalk_gpu.info
src/graph/transform/: to_block.cc
src/graph/transform/hip/: cuda_compact_graph.cpp  cuda_map_edges.h  (+9 more)
src/partition/: ndarray_partition.cc
src/partition/hip/: partition_op.cpp  partition_op.info
src/runtime/: c_runtime_api.cc  dlpack_convert.cc  module.cc  registry.cc  tensordispatch.cc
src/runtime/cuda/: hip_common.h  hip_common.info
src/runtime/hip/: cuda_hashtable.cpp  cuda_hashtable.info  hip_common.h  hip_device_api.cc  hip_device_api.cpp  hip_device_api.info  hip_hashtable.cpp  hip_hashtable.h
tensoradapter/include/: tensoradapter.h
tensoradapter/pytorch/: CMakeLists.txt  build.sh  torch.cpp
tests/cpp/: common.h  test_aten.cc  test_csrmm.cc  test_partition.cc  test_spmat_coo.cc  test_spmat_csr.cc  test_unit_graph.cc
tests/scripts/: task_unit_test.sh
(+1 files in other folders)
